# pyclasscharts

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
examples/: test_timetable.py
pyclasscharts/: __init__.py  base_client.py  consts.py  exceptions.py  parent_client.py  student_client.py  types.py  utils.py
tests/: __init__.py  conftest.py  test_base_client.py  test_parent_client.py  test_student_client.py  test_utils.py
